--- a/client/index.html
+++ b/client/index.html
@@ -1,255 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ollama Chat Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        body { 
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            background-color: #f5f5f5;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-        }
-        .header {
-            background-color: #fff;
-            padding: 15px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-            border-radius: 8px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        .header-controls {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-        .model-selector {
-            padding: 6px 12px;
-            border: 1px solid #dee2e6;
-            border-radius: 20px;
-            font-size: 14px;
-            background-color: white;
-            cursor: pointer;
-        }
-        .model-selector:focus {
-            outline: none;
-            border-color: #007bff;
-        }
-        .title {
-            font-size: 24px;
-            color: #333;
-            margin: 0;
-        }
-        #serverStatus {
-            padding: 6px 12px;
-            border-radius: 20px;
-            font-size: 14px;
-            background-color: #f8f9fa;
-        }
-        .chat-container {
-            flex: 1;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-        }
-        #chatHistory {
-            flex: 1;
-            overflow-y: auto;
-            padding: 20px;
-        }
-        .message {
-            margin-bottom: 20px;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeIn 0.3s ease forwards;
-        }
-        @keyframes fadeIn {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        .message.user {
-            text-align: right;
-        }
-        .message.assistant {
-            text-align: left;
-        }
-        .message-content {
-            display: inline-block;
-            padding: 10px 15px;
-            border-radius: 15px;
-            max-width: 80%;
-            word-wrap: break-word;
-            text-align: left;
-        }
-        .user .message-content {
-            background-color: #007bff;
-            color: white;
-        }
-        .assistant .message-content {
-            background-color: #e9ecef;
-            color: #333;
-        }
-        .input-container {
-            padding: 20px;
-            background-color: #fff;
-            border-top: 1px solid #dee2e6;
-            display: flex;
-            gap: 10px;
-        }
-        #messageInput { 
-            flex: 1;
-            padding: 12px;
-            border: 1px solid #dee2e6;
-            border-radius: 8px;
-            font-size: 16px;
-            transition: border-color 0.3s;
-        }
-        #messageInput:focus {
-            outline: none;
-            border-color: #007bff;
-        }
-        #sendButton { 
-            padding: 12px 24px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-        #sendButton:hover {
-            background-color: #0056b3;
-        }
-        #sendButton:disabled {
-            background-color: #6c757d;
-            cursor: not-allowed;
-        }
-        .typing-indicator {
-            padding: 10px 15px;
-            background-color: #e9ecef;
-            border-radius: 15px;
-            color: #6c757d;
-            display: inline-block;
-            animation: pulse 1.5s infinite;
-        }
-        @keyframes pulse {
-            0% { opacity: .5; }
-            50% { opacity: 1; }
-            100% { opacity: .5; }
-        }
-        .error-message {
-            background-color: #dc3545;
-            color: white;
-            padding: 10px 15px;
-            border-radius: 8px;
-            margin-bottom: 10px;
-            animation: shake 0.5s;
-        }
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-10px); }
-            75% { transform: translateX(10px); }
-        }
-        .code-block {
-            position: relative;
-            margin: 1em 0;
-            background: #f8f9fa;
-            border-radius: 8px;
-            font-family: 'Consolas', 'Monaco', monospace;
-        }
+    <link rel="stylesheet" href="styles.css">
 
-        .code-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 8px 12px;
-            font-size: 0.85em;
-            color: #6c757d;
-            border-bottom: 1px solid #dee2e6;
-        }
-
-        .code-language {
-            text-transform: uppercase;
-            font-size: 0.85em;
-            font-weight: 500;
-        }
-
-        .copy-icon {
-            cursor: pointer;
-            padding: 4px;
-            color: #6c757d;
-            transition: color 0.2s;
-        }
-
-        .copy-icon:hover {
-            color: #212529;
-        }
-
-        .copy-icon.copied {
-            color: #28a745;
-        }
-
-        .code-block pre {
-            margin: 0 !important;
-            padding: 12px;
-        }
-
-        .code-block code {
-            padding: 0 !important;
-            background: transparent !important;
-            font-family: inherit;
-        }
-
-        .toast {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: rgba(40, 167, 69, 0.9);
-            color: white;
-            padding: 8px 16px;
-            border-radius: 4px;
-            display: none;
-            animation: fadeIn 0.3s, fadeOut 0.3s 1.7s;
-            z-index: 1000;
-            font-size: 0.9em;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes fadeOut {
-            from { opacity: 1; transform: translateY(0); }
-            to { opacity: 0; transform: translateY(10px); }
-        }
-    </style>
 </head>
 <body>
+    <button id="theme-toggle" aria-label="Toggle theme">
+        <i class="fas fa-moon"></i>
+    </button>
     <div class="container">
         <div class="header">
             <h1 class="title">Ollama Chat</h1>
