--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,10 @@
         <div class="chat-container">
             <div id="chatHistory"></div>
             <div class="input-container">
-                <input type="text" id="messageInput" placeholder="Type your message..." autocomplete="off">
-                <button id="sendButton" onclick="sendMessage()">Send</button>
+                <textarea id="messageInput" placeholder="Type your message..."></textarea>
+                <button id="sendButton" onclick="sendMessage()">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
             </div>
         </div>
     </div>
